[gd_scene load_steps=9 format=3 uid="uid://b6dnogrty81lx"]

[ext_resource type="Texture2D" uid="uid://exes5gfq4g8" path="res://sprites/game/pwrup/whiplash.png" id="1_k7hmx"]
[ext_resource type="Script" path="res://objects/game/pwrup/Whiplash.gd" id="1_pf6gi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bep00"]
atlas = ExtResource("1_k7hmx")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa1l8"]
atlas = ExtResource("1_k7hmx")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gugph"]
atlas = ExtResource("1_k7hmx")
region = Rect2(0, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lnb"]
atlas = ExtResource("1_k7hmx")
region = Rect2(0, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaayy"]
atlas = ExtResource("1_k7hmx")
region = Rect2(0, 256, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rgyqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bep00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa1l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gugph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaayy")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[node name="Whiplash" type="Node2D"]
z_index = 3
z_as_relative = false
script = ExtResource("1_pf6gi")

[node name="Container" type="Node2D" parent="."]

[node name="WhipSprite" type="AnimatedSprite2D" parent="Container"]
position = Vector2(32, 0)
sprite_frames = SubResource("SpriteFrames_rgyqd")
autoplay = "default"

[node name="HitScan" type="RayCast2D" parent="."]
collision_mask = 27

[connection signal="animation_finished" from="Container/WhipSprite" to="." method="_on_animated_sprite_2d_animation_finished"]
